ingress-controller/internal/dataplane/testdata/golden/udproute-example/in.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: example-gateway-class
spec:
  controllerName: konghq.com/kic-gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-udp-gateway
  namespace: udp-example
spec:
  gatewayClassName: example-gateway-class
  listeners:
  - name: udp
    protocol: UDP
    port: 9999
status:
  listeners:
  - name: udp
    supportedKinds:
    - group: gateway.networking.k8s.io
      kind: UDPRoute
    conditions:
    - type: Programmed
      status: "True"
      reason: Programmed
      message: ""
      lastTransitionTime: "2024-01-01T00:00:00Z"
---
apiVersion: gateway.networking.k8s.io/v1
kind: UDPRoute
metadata:
  name: tftp
  namespace: udp-example
spec:
  parentRefs:
  - name: example-udp-gateway
    namespace: udp-example
  rules:
  - name: rule-tftp
    backendRefs:
    - name: tftp
      port: 9999
---
apiVersion: v1
kind: Service
metadata:
  name: tftp
  namespace: udp-example
spec:
  ports:
  - port: 9999
    name: tftp
    protocol: UDP
    targetPort: 9999
  selector:
    app: tftp
  type: ClusterIP
